--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "spatie/laravel-permission": "^5.7",
+        "tomlerendu/laravel-convert-case-middleware": "^1.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
