--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "element-ui": "2.15.8",
     "inputmask": "5.0.7",
     "lodash": "4.17.21",
+    "moment": "^2.29.4",
     "sass": "~1.32.6",
     "sass-loader": "^10",
     "vue": "^2.6.11",
